# ibex-demo-system

./: ibex_demo_system_core.core
data/: pins_sonata.xdc
rtl/fpga/: clkgen_sonata.sv  top_artya7.sv  top_sonata.sv
rtl/system/: ibex_demo_system.sv  jtag_id_pkg.sv
rtl/system/usbdev/: usbdev.sv  usbdev_reg_top.sv
sw/c/: CMakeLists.txt  gcc_toolchain.cmake
sw/c/common/: gpio.h
sw/c/demo/: CMakeLists.txt
sw/c/demo/hello_world/: main.c
sw/c/demo/i2c/: CMakeLists.txt  Makefile  base_status.h  check.h  dif_i2c.c  dif_i2c.h  dif_i2c_autogen.c  dif_i2c_autogen.h  i2c_regs.h  i2c_test.c  i2c_testutils.c  i2c_testutils.h  ibex.h  macros.h  math.c  math.h  memory.c  mmio.h  print.c  qtmatrix-text.cpp  status.c  status.h
sw/c/demo/usbdev/: CMakeLists.txt  bitfield.h  check.h  dif_base.h  dif_usbdev.c  dif_usbdev.h  dif_usbdev_autogen.c  dif_usbdev_autogen.h  ibex.h  internal_status.h  log.h  memory.h  print.h  status.h  usb_testutils.c  usb_testutils.h  usb_testutils_controlep.c  usb_testutils_controlep.h  usb_testutils_diags.c  usb_testutils_diags.h  usb_testutils_streams.c  usb_testutils_streams.h  usbdev_mem_test.c  usbdev_stream_test.c  usbdev_test.c
sw/common/: link.ld
util/: arty-a7-openocd-cfg.tcl  load_sonata.sh  sonata-openocd-cfg.tcl
